more understanding about nested elements

--- a/nb/learn_dictionary.ipynb
+++ b/nb/learn_dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitals = {\"USA\": \"Washington D.C.\",\n",
     "                    \"India\": \"New Delhi\",\n",
     "                    \"China\": \"Beijing\",\n",
-    "                    \"Russia\": \"Moscow\"}\n",
-    "\n"
+    "                    \"Russia\": [\"St. Petersburg\", \"Moscow\"]}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -173,20 +172,20 @@
       " |  __hash__ = None\n",
       "\n",
       "None\n",
-      "None\n"
+      "['St. Petersburg', 'Moscow']\n"
      ]
     }
    ],
    "source": [
     "print(dir(capitals))\n",
     "print(help(capitals))\n",
-    "print(capitals.get(\"Japan\"))\n",
+    "print(capitals.get(\"Russia\"))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +264,7 @@
       "Detroit\n",
       "New Delhi\n",
       "Beijing\n",
-      "Moscow\n",
+      "['St. Petersburg', 'Moscow']\n",
       "Berlin\n"
      ]
     }
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +288,7 @@
       "USA: Detroit\n",
       "India: New Delhi\n",
       "China: Beijing\n",
-      "Russia: Moscow\n",
+      "Russia: ['St. Petersburg', 'Moscow']\n",
       "Germany: Berlin\n"
      ]
     }
@@ -299,6 +298,13 @@
     "for key, value in capitals.items():\n",
     "    print(f\"{key}: {value}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -317,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
