--- a/nb/test.ipynb
+++ b/nb/test.ipynb
@@ -2,23 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'data': {'mal_id': 1, 'url': 'https://myanimelist.net/anime/1/Cowboy_Bebop', 'images': {'jpg': {'image_url': 'https://cdn.myanimelist.net/images/anime/4/19644.jpg', 'small_image_url': 'https://cdn.myanimelist.net/images/anime/4/19644t.jpg', 'large_image_url': 'https://cdn.myanimelist.net/images/anime/4/19644l.jpg'}, 'webp': {'image_url': 'https://cdn.myanimelist.net/images/anime/4/19644.webp', 'small_image_url': 'https://cdn.myanimelist.net/images/anime/4/19644t.webp', 'large_image_url': 'https://cdn.myanimelist.net/images/anime/4/19644l.webp'}}, 'trailer': {'youtube_id': 'gY5nDXOtv_o', 'url': 'https://www.youtube.com/watch?v=gY5nDXOtv_o', 'embed_url': 'https://www.youtube.com/embed/gY5nDXOtv_o?enablejsapi=1&wmode=opaque&autoplay=1', 'images': {'image_url': 'https://img.youtube.com/vi/gY5nDXOtv_o/default.jpg', 'small_image_url': 'https://img.youtube.com/vi/gY5nDXOtv_o/sddefault.jpg', 'medium_image_url': 'https://img.youtube.com/vi/gY5nDXOtv_o/mqdefault.jpg', 'large_image_url': 'https://img.youtube.com/vi/gY5nDXOtv_o/hqdefault.jpg', 'maximum_image_url': 'https://img.youtube.com/vi/gY5nDXOtv_o/maxresdefault.jpg'}}, 'approved': True, 'titles': [{'type': 'Default', 'title': 'Cowboy Bebop'}, {'type': 'Japanese', 'title': 'カウボーイビバップ'}, {'type': 'English', 'title': 'Cowboy Bebop'}], 'title': 'Cowboy Bebop', 'title_english': 'Cowboy Bebop', 'title_japanese': 'カウボーイビバップ', 'title_synonyms': [], 'type': 'TV', 'source': 'Original', 'episodes': 26, 'status': 'Finished Airing', 'airing': False, 'aired': {'from': '1998-04-03T00:00:00+00:00', 'to': '1999-04-24T00:00:00+00:00', 'prop': {'from': {'day': 3, 'month': 4, 'year': 1998}, 'to': {'day': 24, 'month': 4, 'year': 1999}}, 'string': 'Apr 3, 1998 to Apr 24, 1999'}, 'duration': '24 min per ep', 'rating': 'R - 17+ (violence & profanity)', 'score': 8.75, 'scored_by': 981402, 'rank': 45, 'popularity': 43, 'members': 1896618, 'favorites': 83428, 'synopsis': \"Crime is timeless. By the year 2071, humanity has expanded across the galaxy, filling the surface of other planets with settlements like those on Earth. These new societies are plagued by murder, drug use, and theft, and intergalactic outlaws are hunted by a growing number of tough bounty hunters.\\n\\nSpike Spiegel and Jet Black pursue criminals throughout space to make a humble living. Beneath his goofy and aloof demeanor, Spike is haunted by the weight of his violent past. Meanwhile, Jet manages his own troubled memories while taking care of Spike and the Bebop, their ship. The duo is joined by the beautiful con artist Faye Valentine, odd child Edward Wong Hau Pepelu Tivrusky IV, and Ein, a bioengineered Welsh Corgi.\\n\\nWhile developing bonds and working to catch a colorful cast of criminals, the Bebop crew's lives are disrupted by a menace from Spike's past. As a rival's maniacal plot continues to unravel, Spike must choose between life with his newfound family or revenge for his old wounds.\\n\\n[Written by MAL Rewrite]\", 'background': 'When Cowboy Bebop first aired in spring of 1998 on TV Tokyo, only episodes 2, 3, 7-15, and 18 were broadcast, it was concluded with a recap special known as Yose Atsume Blues. This was due to anime censorship having increased following the big controversies over Evangelion, as a result most of the series was pulled from the air due to violent content. Satellite channel WOWOW picked up the series in the fall of that year and aired it in its entirety uncensored. Cowboy Bebop was not a ratings hit in Japan, but sold over 19,000 DVD units in the initial release run, and 81,000 overall. Protagonist Spike Spiegel won Best Male Character, and Megumi Hayashibara won Best Voice Actor for her role as Faye Valentine in the 1999 and 2000 Anime Grand Prix, respectively. Cowboy Bebop\\'s biggest influence has been in the United States, where it premiered on Adult Swim in 2001 with many reruns since. The show\\'s heavy Western influence struck a chord with American viewers, where it became a \"gateway drug\" to anime aimed at adult audiences.', 'season': 'spring', 'year': 1998, 'broadcast': {'day': 'Saturdays', 'time': '01:00', 'timezone': 'Asia/Tokyo', 'string': 'Saturdays at 01:00 (JST)'}, 'producers': [{'mal_id': 23, 'type': 'anime', 'name': 'Bandai Visual', 'url': 'https://myanimelist.net/anime/producer/23/Bandai_Visual'}], 'licensors': [{'mal_id': 102, 'type': 'anime', 'name': 'Funimation', 'url': 'https://myanimelist.net/anime/producer/102/Funimation'}], 'studios': [{'mal_id': 14, 'type': 'anime', 'name': 'Sunrise', 'url': 'https://myanimelist.net/anime/producer/14/Sunrise'}], 'genres': [{'mal_id': 1, 'type': 'anime', 'name': 'Action', 'url': 'https://myanimelist.net/anime/genre/1/Action'}, {'mal_id': 46, 'type': 'anime', 'name': 'Award Winning', 'url': 'https://myanimelist.net/anime/genre/46/Award_Winning'}, {'mal_id': 24, 'type': 'anime', 'name': 'Sci-Fi', 'url': 'https://myanimelist.net/anime/genre/24/Sci-Fi'}], 'explicit_genres': [], 'themes': [{'mal_id': 50, 'type': 'anime', 'name': 'Adult Cast', 'url': 'https://myanimelist.net/anime/genre/50/Adult_Cast'}, {'mal_id': 29, 'type': 'anime', 'name': 'Space', 'url': 'https://myanimelist.net/anime/genre/29/Space'}], 'demographics': []}, 'jikan_url': 'https://api.jikan.moe/v4/anime/1', 'headers': {'Server': 'nginx/1.24.0', 'Date': 'Sat, 24 Aug 2024 04:37:02 GMT', 'Content-Type': 'application/json', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'Cache-Control': 'public, s-maxage=86400', 'x-request-fingerprint': 'request:anime:1ab5e4f6f8cd1573c8ff865af201c125cdff1dcb', 'expires': 'Sun, 25 Aug 2024 01:06:48 GMT', 'last-modified': 'Sat, 24 Aug 2024 01:06:48 GMT', 'access-control-allow-origin': '*', 'Content-Encoding': 'gzip', 'Vary': 'Accept-Encoding', 'X-Cache-Status': 'HIT', 'X-Powered-By': 'the-power-of-friendship'}}\n",
+      "Title: Cowboy Bebop, Source: Original\n"
+     ]
+    }
+   ],
+   "source": [
+    "from jikanpy import Jikan\n",
+    "import json\n",
+    "# Initialize Jikan with the v4 base URL\n",
+    "jikan = Jikan(selected_base='https://api.jikan.moe/v4')\n",
+    "\n",
+    "# Now you can make your requests as before\n",
+    "cb_bp = jikan.anime(1)\n",
+    "\n",
+    "# Print the entire response to explore the structure\n",
+    "print(cb_bp)\n",
+    "\n",
+    "# Access specific data\n",
+    "print(f\"Title: {cb_bp['data']['title']}, Source: {cb_bp['data']['source']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jikanpy import Jikan\n",
-    "import pandas as pd\n",
-    "import time\n",
-    "import os \n",
+    "with open(\"anime_data.json\", \"w\") as outfile:\n",
+    "    json.dump(cb_bp, outfile, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_names = [genre['name'] for genre in cb_bp['data']['genres']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Action', 'Award Winning', 'Sci-Fi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(genre_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Cowboy Bebop', 'カウボーイビバップ', 'Cowboy Bebop']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [titles['title'] for titles in cb_bp['data']['titles']]\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Cowboy Bebop\n",
+      "Titles: ['Cowboy Bebop', 'カウボーイビバップ', 'Cowboy Bebop']\n",
+      "Genres: ['Action', 'Award Winning', 'Sci-Fi']\n",
+      "Rating: R - 17+ (violence & profanity)\n",
+      "Score: 8.75\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "\n",
-    "jikan = Jikan()\n",
+    "# Extracting the required information\n",
     "\n",
-    "cb_bp = jikan.anime(1)\n",
+    "# Name (primary title)\n",
+    "name = cb_bp['data']['title']\n",
     "\n",
-    "# if 'data' in cb_bp:\n",
-    "#     print(cb_bp['data'].keys())\n",
-    "# print(f\"Title: {cb_bp['title']}, Source: {cb_bp['source']}\")"
+    "# All titles\n",
+    "titles = [title['title'] for title in cb_bp['data']['titles']]\n",
+    "\n",
+    "# Genres\n",
+    "genres = [genre['name'] for genre in cb_bp['data']['genres']]\n",
+    "\n",
+    "# Rating\n",
+    "rating = cb_bp['data']['rating']\n",
+    "\n",
+    "# Score\n",
+    "score = cb_bp['data']['score']\n",
+    "\n",
+    "# Output the extracted information\n",
+    "print(f\"Name: {name}\")\n",
+    "print(f\"Titles: {titles}\")\n",
+    "print(f\"Genres: {genres}\")\n",
+    "print(f\"Rating: {rating}\")\n",
+    "print(f\"Score: {score}\")\n"
    ]
   }
  ],
@@ -38,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
