raw data fetched & saved to .xlsx & .csv

--- a/nb/test.ipynb
+++ b/nb/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,51 +17,400 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    for page in range(1, 37):\n",
-    "        response = jikan.search('anime', '', page=page, parameters={\n",
-    "            'start_date': '2014-01-01',\n",
-    "            'end_date': '2023-12-31',\n",
-    "            'type': 'tv',\n",
-    "            'min_score': '7'\n",
-    "        })\n",
-    "        print(response)  # Print the raw response to understand what's being returned\n",
-    "        \n",
-    "        # Rate limiting - Wait for 1 second before making the next request\n",
-    "        time.sleep(1)\n",
-    "except Exception as e:\n",
-    "    print(f\"An error occurred: {e}\")"
+    "jikan = Jikan()\n",
+    "\n",
+    "# Placeholder for the extracted data\n",
+    "extracted_data = []\n",
+    "\n",
+    "# Define the year ranges you want to fetch data for\n",
+    "year_ranges = [(2010, 2012), (2013, 2015), (2016, 2018), (2019, 2021), (2022, 2023)]\n",
+    "\n",
+    "# Function to fetch and process anime data within a given year range\n",
+    "def fetch_anime_data(start_year, end_year):\n",
+    "    page = 1\n",
+    "    while True:\n",
+    "        try:\n",
+    "            # Fetch data from the API\n",
+    "            response = jikan.search('anime', '', page=page, parameters={\n",
+    "                'start_date': f'{start_year}-01-01',\n",
+    "                'end_date': f'{end_year}-12-31',\n",
+    "                'type': 'tv',\n",
+    "            })\n",
+    "            \n",
+    "            # Process each anime in the current page's response\n",
+    "            for anime in response['data']:\n",
+    "                mal_id = anime.get('mal_id')\n",
+    "                score = anime.get('score')\n",
+    "                rank = anime.get('rank')\n",
+    "                popularity = anime.get('popularity')\n",
+    "                season = anime.get('season')\n",
+    "                year = anime.get('year')\n",
+    "\n",
+    "                # Extracting titles\n",
+    "                title_default = None\n",
+    "                title_japanese = None\n",
+    "\n",
+    "                for title_entry in anime.get('titles', []):\n",
+    "                    if title_entry['type'] == 'Default':\n",
+    "                        title_default = title_entry['title']\n",
+    "                    elif title_entry['type'] == 'Japanese':\n",
+    "                        title_japanese = title_entry['title']\n",
+    "\n",
+    "                # Extract all genre names as a comma-separated string\n",
+    "                genres = ', '.join([genre['name'] for genre in anime.get('genres', [])])\n",
+    "                \n",
+    "                # Append the extracted information as a tuple to the list\n",
+    "                extracted_data.append((mal_id, title_default, title_japanese, score, rank, popularity, season, year, genres))\n",
+    "            \n",
+    "            # Check if there's another page\n",
+    "            if not response['pagination']['has_next_page']:\n",
+    "                break\n",
+    "            \n",
+    "            # Move to the next page\n",
+    "            page += 1\n",
+    "            \n",
+    "            # Respect the rate limit\n",
+    "            time.sleep(1.1)  # Slightly more than 1 second to ensure we're under the limit\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred: {e}\")\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching data from 2010 to 2012...\n",
+      "Fetching data from 2013 to 2015...\n",
+      "Fetching data from 2016 to 2018...\n",
+      "Fetching data from 2019 to 2021...\n",
+      "Fetching data from 2022 to 2023...\n",
+      "      mal_id                               title_default  \\\n",
+      "0       4334                                     Heroman   \n",
+      "1       5032                         Cobra The Animation   \n",
+      "2       5277                    Sekirei: Pure Engagement   \n",
+      "3       5337       Bakugan Battle Brawlers: New Vestroia   \n",
+      "4       5690                     Nodame Cantabile Finale   \n",
+      "...      ...                                         ...   \n",
+      "3005   57185           Heart Cocktail Colorful: Haru-hen   \n",
+      "3006   57186          Heart Cocktail Colorful: Natsu-hen   \n",
+      "3007   57436           Heart Cocktail Colorful: Fuyu-hen   \n",
+      "3008   57952  Jijia Yingxiong: Ji Dou Yongzhe 2nd Season   \n",
+      "3009   58630                    Oshiri Tantei 8th Season   \n",
+      "\n",
+      "                title_japanese  score     rank  popularity  season    year  \\\n",
+      "0                       ヒーローマン   6.81   5087.0        3535  spring  2010.0   \n",
+      "1          COBRA THE ANIMATION   7.07   3900.0        6622  winter  2010.0   \n",
+      "2        セキレイ～Pure Engagement～   7.26   2964.0        1009  summer  2010.0   \n",
+      "3     爆丸バトルブローラーズ New Vestroia   6.56   6448.0        2700  spring  2010.0   \n",
+      "4              のだめカンタービレ フィナーレ   8.22    355.0        1766  winter  2010.0   \n",
+      "...                        ...    ...      ...         ...     ...     ...   \n",
+      "3005           ハートカクテル カラフル 春編    NaN  20354.0       20914  winter  2023.0   \n",
+      "3006           ハートカクテル カラフル 夏編    NaN  20355.0       20863  summer  2023.0   \n",
+      "3007           ハートカクテル カラフル 冬編    NaN  20353.0       17758    fall  2023.0   \n",
+      "3008                 機甲英雄 機鬥勇者    NaN  20874.0       23308    fall  2023.0   \n",
+      "3009                   おしりたんてい    NaN  17589.0       23194    fall  2023.0   \n",
+      "\n",
+      "                         genres  \n",
+      "0                Action, Sci-Fi  \n",
+      "1     Action, Adventure, Sci-Fi  \n",
+      "2         Action, Comedy, Ecchi  \n",
+      "3            Adventure, Fantasy  \n",
+      "4               Comedy, Romance  \n",
+      "...                         ...  \n",
+      "3005                    Romance  \n",
+      "3006                    Romance  \n",
+      "3007                    Romance  \n",
+      "3008             Action, Sci-Fi  \n",
+      "3009   Comedy, Fantasy, Mystery  \n",
+      "\n",
+      "[3010 rows x 9 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "response.keys()"
+    "# Fetch data for each defined year range\n",
+    "for start_year, end_year in year_ranges:\n",
+    "    print(f\"Fetching data from {start_year} to {end_year}...\")\n",
+    "    fetch_anime_data(start_year, end_year)\n",
+    "\n",
+    "# Convert the list of tuples to a pandas DataFrame\n",
+    "df = pd.DataFrame(extracted_data, columns=[\n",
+    "    'mal_id', 'title_default', 'title_japanese', 'score', 'rank', 'popularity', 'season', 'year', 'genres'\n",
+    "])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mal_id</th>\n",
+       "      <th>title_default</th>\n",
+       "      <th>title_japanese</th>\n",
+       "      <th>score</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>season</th>\n",
+       "      <th>year</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4334</td>\n",
+       "      <td>Heroman</td>\n",
+       "      <td>ヒーローマン</td>\n",
+       "      <td>6.81</td>\n",
+       "      <td>5087.0</td>\n",
+       "      <td>3535</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Action, Sci-Fi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5032</td>\n",
+       "      <td>Cobra The Animation</td>\n",
+       "      <td>COBRA THE ANIMATION</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>3900.0</td>\n",
+       "      <td>6622</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Action, Adventure, Sci-Fi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5277</td>\n",
+       "      <td>Sekirei: Pure Engagement</td>\n",
+       "      <td>セキレイ～Pure Engagement～</td>\n",
+       "      <td>7.26</td>\n",
+       "      <td>2964.0</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>summer</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Action, Comedy, Ecchi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5337</td>\n",
+       "      <td>Bakugan Battle Brawlers: New Vestroia</td>\n",
+       "      <td>爆丸バトルブローラーズ New Vestroia</td>\n",
+       "      <td>6.56</td>\n",
+       "      <td>6448.0</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Adventure, Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5690</td>\n",
+       "      <td>Nodame Cantabile Finale</td>\n",
+       "      <td>のだめカンタービレ フィナーレ</td>\n",
+       "      <td>8.22</td>\n",
+       "      <td>355.0</td>\n",
+       "      <td>1766</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Comedy, Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3005</th>\n",
+       "      <td>57185</td>\n",
+       "      <td>Heart Cocktail Colorful: Haru-hen</td>\n",
+       "      <td>ハートカクテル カラフル 春編</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20354.0</td>\n",
+       "      <td>20914</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3006</th>\n",
+       "      <td>57186</td>\n",
+       "      <td>Heart Cocktail Colorful: Natsu-hen</td>\n",
+       "      <td>ハートカクテル カラフル 夏編</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20355.0</td>\n",
+       "      <td>20863</td>\n",
+       "      <td>summer</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3007</th>\n",
+       "      <td>57436</td>\n",
+       "      <td>Heart Cocktail Colorful: Fuyu-hen</td>\n",
+       "      <td>ハートカクテル カラフル 冬編</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20353.0</td>\n",
+       "      <td>17758</td>\n",
+       "      <td>fall</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3008</th>\n",
+       "      <td>57952</td>\n",
+       "      <td>Jijia Yingxiong: Ji Dou Yongzhe 2nd Season</td>\n",
+       "      <td>機甲英雄 機鬥勇者</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20874.0</td>\n",
+       "      <td>23308</td>\n",
+       "      <td>fall</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>Action, Sci-Fi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3009</th>\n",
+       "      <td>58630</td>\n",
+       "      <td>Oshiri Tantei 8th Season</td>\n",
+       "      <td>おしりたんてい</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17589.0</td>\n",
+       "      <td>23194</td>\n",
+       "      <td>fall</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>Comedy, Fantasy, Mystery</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3010 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mal_id                               title_default  \\\n",
+       "0       4334                                     Heroman   \n",
+       "1       5032                         Cobra The Animation   \n",
+       "2       5277                    Sekirei: Pure Engagement   \n",
+       "3       5337       Bakugan Battle Brawlers: New Vestroia   \n",
+       "4       5690                     Nodame Cantabile Finale   \n",
+       "...      ...                                         ...   \n",
+       "3005   57185           Heart Cocktail Colorful: Haru-hen   \n",
+       "3006   57186          Heart Cocktail Colorful: Natsu-hen   \n",
+       "3007   57436           Heart Cocktail Colorful: Fuyu-hen   \n",
+       "3008   57952  Jijia Yingxiong: Ji Dou Yongzhe 2nd Season   \n",
+       "3009   58630                    Oshiri Tantei 8th Season   \n",
+       "\n",
+       "                title_japanese  score     rank  popularity  season    year  \\\n",
+       "0                       ヒーローマン   6.81   5087.0        3535  spring  2010.0   \n",
+       "1          COBRA THE ANIMATION   7.07   3900.0        6622  winter  2010.0   \n",
+       "2        セキレイ～Pure Engagement～   7.26   2964.0        1009  summer  2010.0   \n",
+       "3     爆丸バトルブローラーズ New Vestroia   6.56   6448.0        2700  spring  2010.0   \n",
+       "4              のだめカンタービレ フィナーレ   8.22    355.0        1766  winter  2010.0   \n",
+       "...                        ...    ...      ...         ...     ...     ...   \n",
+       "3005           ハートカクテル カラフル 春編    NaN  20354.0       20914  winter  2023.0   \n",
+       "3006           ハートカクテル カラフル 夏編    NaN  20355.0       20863  summer  2023.0   \n",
+       "3007           ハートカクテル カラフル 冬編    NaN  20353.0       17758    fall  2023.0   \n",
+       "3008                 機甲英雄 機鬥勇者    NaN  20874.0       23308    fall  2023.0   \n",
+       "3009                   おしりたんてい    NaN  17589.0       23194    fall  2023.0   \n",
+       "\n",
+       "                         genres  \n",
+       "0                Action, Sci-Fi  \n",
+       "1     Action, Adventure, Sci-Fi  \n",
+       "2         Action, Comedy, Ecchi  \n",
+       "3            Adventure, Fantasy  \n",
+       "4               Comedy, Romance  \n",
+       "...                         ...  \n",
+       "3005                    Romance  \n",
+       "3006                    Romance  \n",
+       "3007                    Romance  \n",
+       "3008             Action, Sci-Fi  \n",
+       "3009   Comedy, Fantasy, Mystery  \n",
+       "\n",
+       "[3010 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "response['data']"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to C:\\Users\\spata\\Documents\\GitHub\\animearc_gc\\nb\\..\\data\\anime_data.xlsx & C:\\Users\\spata\\Documents\\GitHub\\animearc_gc\\nb\\..\\data\\anime_data.csv.\n"
+     ]
+    }
+   ],
    "source": [
-    "print(json.dumps(response['data'], indent=4))"
+    "import os\n",
+    "\n",
+    "# Get the current working directory (which should be your project root)\n",
+    "script_dir = os.path.dirname(os.path.realpath('test.ipynb'))\n",
+    "\n",
+    "# Construct the path to the 'data' directory relative to the project root\n",
+    "data_dir = os.path.join(script_dir, '..', 'data')\n",
+    "\n",
+    "# Ensure the data directory exists\n",
+    "os.makedirs(data_dir, exist_ok=True)\n",
+    "\n",
+    "# Define the file path for saving your DataFrame with UTF-8 encoding\n",
+    "file_path = os.path.join(data_dir, 'anime_data.xlsx')\n",
+    "file_path2 = os.path.join(data_dir, 'anime_data.csv')\n",
+    "\n",
+    "# Save your DataFrame to the file\n",
+    "df.to_excel(file_path, index=False, engine='openpyxl')\n",
+    "df.to_csv(file_path2, index=False, encoding='utf-8-sig')\n",
+    "\n",
+    "print(f\"Data saved to {file_path} & {file_path2}.\")\n"
    ]
   }
  ],
